# pwc-business-case

./: .gitignore  README.md  business_case.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
app_pages/: conclusion.py  discovery.py  problem_solving.py
further_consideration/: bm25-hybrid-scoring.md  embedding-model-upgrade.md
lib/: llm_client.py  pdf_processor.py  vector_store.py
plans/: plan-architecture-tab.md  plan-metadata-tags.md  plan.md
